# fcgi-http-server

./: .gitignore  CMakeLists.txt  README.md  fcgi.h  main.cpp
fcgi-app/app/: app.py  requirements.txt  serve.py
http-server/: CMakeLists.txt  main.cpp  server.config.tmpl
http-server/config/: ConfigProvider.cpp  ConfigProvider.h  exceptions.h
http-server/content/: ContentProvider.h  exceptions.h
http-server/content/fcgi/: FcgiContentProvider.cpp  FcgiContentProvider.h  FcgiParser.cpp  FcgiParser.h
http-server/content/fcgi/communication/: FcgiCommunicator.cpp  FcgiCommunicator.h  exceptions.h
http-server/content/static/: StaticContentProvider.cpp  StaticContentProvider.h  exceptions.h
http-server/server/: Server.cpp  Server.h
http-server/server/exception/: exceptions.h
http-server/server/http/: HttpParser.cpp  HttpParser.h  exceptions.h  http.h
http-server/socket/: Socket.cpp  Socket.h  exceptions.h
server/: CommunicationSocket.cpp  CommunicationSocket.h  FcgiCommunicator.cpp  FcgiCommunicator.h  FcgiComunicator.cpp  FcgiComunicator.h  FcgiParser.cpp  FcgiParser.h  HttpResponder.cpp  HttpResponder.h  Server.cpp  Server.h  Socket.cpp  Socket.h
server/exception/: exceptions.h
src/: exceptions.h  main.cpp
src/content/: ContentProvider.h  exceptions.h
src/content/fcgi/: FcgiCommunicator.cpp  FcgiCommunicator.h  FcgiContentProvider.cpp  FcgiContentProvider.h  FcgiParser.cpp  FcgiParser.h  fcgi.h
src/content/fcgi/communication/: FcgiCommunicator.cpp  FcgiCommunicator.h  exceptions.h
src/content/static/: StaticContentProvider.cpp  StaticContentProvider.h
src/server/: Server.cpp  Server.h
src/server/exception/: exceptions.h
src/server/http/: HttpParser.cpp  HttpParser.h  HttpResponder.cpp  HttpResponder.h  http.h
src/socket/: Socket.cpp  Socket.h  exceptions.h
src/socket/exception/: exceptions.h
